--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,55 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Make 'yank' in copy mode with vi, copy to the clipboard
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+# Use Ctrl + h/j/k/l to move between panes
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# Avoid date/time taking up space
+set -g status-right ''
+set -g status-right-length 0
+
+run-shell ~/dev/others/tmux-jump/tmux-jump.tmux
+
+# Base16 Gruvbox dark, hard
+# Scheme author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+# Template author: Tinted Theming: (https://github.com/tinted-theming)
+
+# default statusbar colors
+set-option -g status-style "fg=#bdae93,bg=#3c3836"
+
+# default window title colors
+set-window-option -g window-status-style "fg=#bdae93,bg=default"
+
+# active window title colors
+set-window-option -g window-status-current-style "fg=#fabd2f,bg=default"
+
+# pane border
+set-option -g pane-border-style "fg=#3c3836"
+set-option -g pane-active-border-style "fg=#504945"
+
+# message text
+set-option -g message-style "fg=#d5c4a1,bg=#3c3836"
+
+# pane number display
+set-option -g display-panes-active-colour "#b8bb26"
+set-option -g display-panes-colour "#fabd2f"
+
+# clock
+set-window-option -g clock-mode-colour "#b8bb26"
+
+# copy mode highligh
+set-window-option -g mode-style "fg=#bdae93,bg=#504945"
+
+# bell
+set-window-option -g window-status-bell-style "fg=#3c3836,bg=#fb4934"
